# rust-oauth2-study

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/2021-06-07-024732_shopify_connection/: down.sql  up.sql
scripts/: run-tests.sh
src/: config.rs  hold.rs  lib.rs  main.rs  schema.rs  view.rs
src/api/: login.rs  mod.rs  shopify.rs
src/handlers/: hello_handler.rs  login_handler.rs  mod.rs  shopify_handler.rs
src/models/: mod.rs  shopify_connection.rs
src/routes/: hello_route.rs  login_route.rs  mod.rs  shopify_route.rs
src/services/: shopify_service.rs
tests/: shopify_connection.rs
