[package]
name = "rust-oauth2-study"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.7"
ory-hydra-client = "1.10.3"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
tera = "1.0.1"
tokio = { version = "1", features = ["full"]  }
warp = { version = "0.3.1", features = ["tls"] }
