[package]
name = "rust-oauth2-study"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7"
log = "0.4.8"
ory-hydra-client = "1.10.3"
reqwest = { version = "0.11.3", features = ["json"]}
reqwest_mock = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
tera = "1.0.1"
tokio = { version = "1", features = ["full"]  }
warp = { version = "0.3.1", features = ["tls"] }

[dev-dependencies]
mocktopus = "0.7.11"
mockito = "0.30.0"
